--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,13 @@ nav ul a.active {
 nav ul a:hover{
     color:#0303b8;
 }
+
+/* Dark mode */
+[data-theme="dark"] nav ul a.active {
+    color: #818cf8;             
+    border-bottom: solid 1px #818cf8;
+}
+
+[data-theme="dark"] nav ul a:hover {
+    color: #a5b4fc;
+}
